	PR go/86343 	* go-gcc.cc (Gcc_backend::set_placeholder_struct_type): Go back to 	build_distinct_type_copy, but copy the fields so that they have 	the right DECL_CONTEXT.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@267789 138bc75d-0d04-0410-961f-82ee72b054a4